<resources>
    <string name="app_name">Eat Now</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preferences headers -->
    <string name="location_header">Location</string>
    <string name="food_header">Food</string>

    <!-- Location Preferences -->
    <string name="use_current_location_title">Use current location</string>
    <string name="custom_location_title">Custom location</string>
    <string name="maximum_distance_title">Maximum distance</string>

    <!-- Food Preferences -->
    <string name="dietary_restrictions_title">Dietary restrictions</string>
    <string name="user">Button</string>
    <string name="userbutton">user</string>
    <string name="provider">provider</string>
    <string name="location_permission_request_text">Access to your current location is needed to find the food items closest to you.</string>
    <string name="location_permission_request_title">Current location</string>
    <string name="get_directions">Get directions</string>
    <string name="menu_add_food">Add food</string>

    <string name="add_food_name">Name</string>
    <string name="add_food_provider">Provider ID</string>
    <string name="add_food_photo">Photo</string>
    <string name="add_food_description">Description</string>
    <string name="add_food_submit">Submit</string>
    <string name="add_food_photo_remove">Remove</string>
</resources>
