<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/location_header">

        <SwitchPreferenceCompat
            app:key="use_current_location"
            app:title="@string/use_current_location_title"/>

        <EditTextPreference
            app:key="custom_location"
            app:title="@string/custom_location_title"/>

        <SeekBarPreference
            app:key="maximum_distance"
            app:title="@string/maximum_distance_title"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/food_header">

        <EditTextPreference
            app:key="dietary_restrictions"
            app:title="@string/dietary_restrictions_title"/>

    </PreferenceCategory>

</PreferenceScreen>
